# rtiow

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
DevOps/: windows-build.bat  windows-run.bat
Source/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  image_exporter.hpp  image_type.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.h  rtweekend.hpp  sphere.hpp  vec3.hpp
src/: hittable.hpp  image_exporter.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp
src/exceptions/: not_implemented.hpp
src/graphics/: cpu_renderer.hpp  renderer_context.hpp  view_context.hpp
src/image/: image_exporter.hpp  image_type.hpp
src/math/: aabb.hpp  interval.hpp  ray.hpp  vec3.hpp
src/scene/: camera.hpp  hittable.hpp  hittable_list.hpp  material.hpp  sphere.hpp
